k8s/gke/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  name: reservation-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: webgui-cluster-ip-service
          servicePort: 80

      - path: /web-gui/angular-gui/*
        backend:
          serviceName: webgui-cluster-ip-service
          servicePort: 80

      - path: /web-gui/angular-gui
        backend:
          serviceName: webgui-cluster-ip-service
          servicePort: 80

      - path: /api/*
        backend:
          serviceName: api-server
          servicePort: 8080
